# Qalbaani

./: LICENSE  readme.md
android/: LICENSE
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: baseline_logout_24.xml  baseline_menu_24.xml  baseline_send_24.xml  bubble_right.xml  chat_vec.xml  edit_24.xml  empty_square.xml  ic_launcher_foreground.xml  info.xml  people_24.xml  photo.xml  round_bubble.xml  rounded.xml  search_24.xml  square.xml
android/app/src/main/res/layout/: activity_chat.xml  activity_main.xml  activity_register.xml  chat_frame.xml  chat_layout.xml  chats.xml  color_picker_template.xml  custom_input_view.xml  fragment_chat.xml  friends.xml  login.xml  main_menu_layout.xml  menu_profile.xml  menu_profile_placeholder.xml  nav_view.xml  profile.xml  profile_layout_thing.xml  snap_chat.xml  snap_chat_template.xml  text_input.xml  text_input_widget.xml  toolbar.xml  users.xml
android/app/src/main/res/style/: attrs4.xml
android/app/src/main/res/values/: attrs2.xml  colors.xml  strings.xml  styles.xml  themes.xml
android/app/src/main/res/values-night-v31/: themes.xml
android/app/src/main/res/values-v21/: styles.xml
android/app/src/main/res/values-v31/: styles.xml  themes.xml
android/app/src/main/res/xml/: text_input_widget_info.xml
android/gradle/wrapper/: gradle-wrapper.properties
backend/: .gitignore  Cargo.toml  README.md
backend/src/: channelHander.rs  database.rs  lib.rs  main.rs  path.rs  server.rs  server2.rs  test.rs  ws.rs
backend/tests/: client.rs
(+25 files in other folders)
