[package]
name = "chattyApi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version= "0.6.18", features = ["query","headers", "ws"]}
axum_static = "1.2.3"
serde = {version = "1.0.171", features = ["derive"]}
tokio = {version= "1.29.1",  features = ["full"]}
tracing-subscriber = {version = "0.3.17", features= ["env-filter"]}
tracing = "0.1.37"
tower-http = {version = "0.4.1", features = ["trace", "fs", "cors"]}
futures = "0.3.28"
axum-extra = "0.7.4"
headers= "0.3.8"
uuid = {version = "1.5.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
lazy_static ="1.4.0"
fastrand = "2.0.0"
bonsaidb = {version ="0.5.0", features =["local", "async"]}
anyhow = "1.0.75"
regex ="1.10.2"
serde_json = "1.0.108"
tungstenite = {version = "0.20.1"} 
socket2 = {version ="0.5.5", features =["all"]}
reqwest = "0.11.22"
url = "2.4.1"
tokio-tungstenite = "0.20.1"
image = "0.24.7"
parking_lot = "0.12.1"
